syntax = "proto3";

package io.aurigraph.v11.proto;

import "google/protobuf/timestamp.proto";
import "common.proto";
import "blockchain.proto";
import "core_types.proto";

option java_multiple_files = true;
option java_package = "io.aurigraph.v11.proto";
option java_outer_classname = "ChannelStreamProto";

/**
 * Channel Stream Protocol Buffer Definitions
 *
 * Replaces WebSocket channel monitoring streams with gRPC-Web bidirectional streaming.
 * Provides real-time streaming of channel creation, updates, and transactions.
 *
 * Key Benefits over WebSocket+JSON:
 * - 60-70% bandwidth reduction (Protobuf vs JSON)
 * - Type-safe client generation (TypeScript + Java)
 * - Built-in flow control and backpressure
 * - HTTP/2 multiplexing (multiple streams, one connection)
 */

// ============================================================================
// Channel Information
// ============================================================================

message ChannelInfo {
  string channel_id = 1;
  string channel_name = 2;
  ChannelType channel_type = 3;
  ChannelStatus status = 4;

  // Participants
  repeated string participant_ids = 5;
  int32 participant_count = 6;
  string creator_id = 7;

  // Metadata
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp last_activity = 9;
  string description = 10;
  map<string, string> metadata = 11;

  // Statistics
  ChannelStatistics statistics = 12;

  // Configuration
  ChannelConfig config = 13;
}

enum ChannelType {
  PUBLIC = 0;
  PRIVATE = 1;
  CONSORTIUM = 2;
  SYSTEM = 3;
}

enum ChannelStatus {
  ACTIVE = 0;
  SUSPENDED = 1;
  CLOSED = 2;
  ARCHIVED = 3;
}

message ChannelConfig {
  int32 max_participants = 1;
  bool require_approval = 2;
  bool allow_public_read = 3;
  int32 transaction_limit_per_second = 4;
  int64 storage_limit_bytes = 5;
  repeated string allowed_transaction_types = 6;
}

message ChannelStatistics {
  int64 total_transactions = 1;
  int64 total_blocks = 2;
  int64 storage_used_bytes = 3;
  double average_tps = 4;
  google.protobuf.Timestamp last_block_time = 5;
  int32 active_contracts = 6;
}

// ============================================================================
// Channel Events
// ============================================================================

message ChannelCreatedEvent {
  ChannelInfo channel = 1;
  string creator_id = 2;
  repeated string initial_participants = 3;
  google.protobuf.Timestamp created_at = 4;
}

message ChannelUpdatedEvent {
  enum UpdateType {
    METADATA_CHANGED = 0;
    CONFIG_CHANGED = 1;
    STATUS_CHANGED = 2;
    DESCRIPTION_CHANGED = 3;
  }

  string channel_id = 1;
  UpdateType update_type = 2;
  string old_value = 3;
  string new_value = 4;
  string updated_by = 5;
  google.protobuf.Timestamp timestamp = 6;
}

message ChannelClosedEvent {
  string channel_id = 1;
  string closed_by = 2;
  string close_reason = 3;
  bool archive_data = 4;
  google.protobuf.Timestamp closed_at = 5;
}

// ============================================================================
// Participant Management
// ============================================================================

message ParticipantEvent {
  enum EventType {
    JOINED = 0;
    LEFT = 1;
    INVITED = 2;
    REMOVED = 3;
    ROLE_CHANGED = 4;
    PERMISSIONS_CHANGED = 5;
  }

  string channel_id = 1;
  string participant_id = 2;
  EventType event_type = 3;

  // Details
  string old_role = 4;
  string new_role = 5;
  repeated string old_permissions = 6;
  repeated string new_permissions = 7;
  string initiated_by = 8;
  string reason = 9;

  google.protobuf.Timestamp timestamp = 10;
}

message ParticipantInfo {
  string participant_id = 1;
  string display_name = 2;
  ParticipantRole role = 3;
  repeated string permissions = 4;
  google.protobuf.Timestamp joined_at = 5;
  google.protobuf.Timestamp last_active = 6;

  // Activity Stats
  int64 transactions_submitted = 7;
  int64 blocks_created = 8;
  double activity_score = 9;
}

enum ParticipantRole {
  OWNER = 0;
  ADMIN = 1;
  MEMBER = 2;
  VIEWER = 3;
  GUEST = 4;
}

// ============================================================================
// Channel Transaction Streaming
// ============================================================================

message ChannelTransactionEvent {
  string channel_id = 1;
  Transaction transaction = 2;
  TransactionStatus status = 3;

  // Context
  string submitter_id = 4;
  int64 block_height = 5;
  string block_hash = 6;

  // Timing
  google.protobuf.Timestamp submitted_at = 7;
  google.protobuf.Timestamp confirmed_at = 8;
  int64 confirmation_time_ms = 9;

  google.protobuf.Timestamp timestamp = 10;
}

message ChannelBlockEvent {
  string channel_id = 1;
  Block block = 2;
  int64 block_height = 3;
  int32 transaction_count = 4;
  string proposer_id = 5;
  google.protobuf.Timestamp created_at = 6;
}

// ============================================================================
// Channel Performance Metrics
// ============================================================================

message ChannelPerformanceUpdate {
  string channel_id = 1;

  // Throughput
  double current_tps = 2;
  double average_tps_last_minute = 3;
  double peak_tps = 4;
  int64 transactions_last_minute = 5;

  // Latency
  double average_transaction_latency_ms = 6;
  double p95_transaction_latency_ms = 7;
  double p99_transaction_latency_ms = 8;

  // Storage
  int64 storage_used_bytes = 9;
  int64 storage_limit_bytes = 10;
  double storage_utilization_percent = 11;

  // Activity
  int32 active_participants = 12;
  int32 pending_transactions = 13;
  int32 failed_transactions_last_hour = 14;

  // Health
  double health_score = 15;
  repeated string warnings = 16;

  google.protobuf.Timestamp timestamp = 17;
}

// ============================================================================
// Channel Statistics & Analytics
// ============================================================================

message ChannelAnalytics {
  string channel_id = 1;
  google.protobuf.Timestamp period_start = 2;
  google.protobuf.Timestamp period_end = 3;

  // Transaction Analytics
  int64 total_transactions = 4;
  int64 successful_transactions = 5;
  int64 failed_transactions = 6;
  double success_rate_percent = 7;

  // Participant Analytics
  int32 total_participants = 8;
  int32 active_participants = 9;
  map<string, int64> transactions_by_participant = 10;

  // Temporal Patterns
  map<string, int64> transactions_by_hour = 11;
  map<string, int64> transactions_by_day = 12;

  // Resource Usage
  int64 total_storage_used_bytes = 13;
  int64 bandwidth_used_bytes = 14;
  double average_block_size_kb = 15;
}

// ============================================================================
// Channel List & Discovery
// ============================================================================

message ChannelListUpdate {
  repeated ChannelInfo channels = 1;
  int32 total_channels = 2;
  int32 active_channels = 3;
  int32 suspended_channels = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message ChannelSearchResult {
  repeated ChannelInfo matching_channels = 1;
  int32 total_results = 2;
  int32 returned_results = 3;
  string search_query = 4;
  google.protobuf.Timestamp timestamp = 5;
}

// ============================================================================
// Stream Control Messages
// ============================================================================

message ChannelSubscribeRequest {
  string client_id = 1;
  string session_token = 2;

  // Subscription Configuration
  repeated string channel_ids = 3;          // Specific channels to monitor (empty = all accessible)
  repeated string event_types = 4;          // ["created", "updated", "closed", "participant", "transaction", "block", "performance", "analytics"]
  int32 update_interval_ms = 5;             // Minimum interval between updates (default: 1000ms)

  // Filtering
  repeated string participant_filter = 6;   // Only events involving these participants
  repeated string transaction_type_filter = 7;
  bool include_archived = 8;

  // Performance Options
  int32 buffer_size = 9;                    // Client-side buffer (default: 100)
  bool detailed_events = 10;                // Include full transaction/block data
}

message ChannelSubscribeResponse {
  bool success = 1;
  string message = 2;
  string subscription_id = 3;
  google.protobuf.Timestamp started_at = 4;
  repeated ChannelInfo subscribed_channels = 5;
}

message ChannelUnsubscribeRequest {
  string subscription_id = 1;
  string client_id = 2;
}

message ChannelUnsubscribeResponse {
  bool success = 1;
  string message = 2;
  int64 total_events_delivered = 3;
  google.protobuf.Timestamp ended_at = 4;
}

// ============================================================================
// Real-Time Channel Events (Union Type)
// ============================================================================

message ChannelEventStream {
  google.protobuf.Timestamp timestamp = 1;
  string event_id = 2;
  string channel_id = 3;

  oneof event_data {
    ChannelCreatedEvent channel_created = 4;
    ChannelUpdatedEvent channel_updated = 5;
    ChannelClosedEvent channel_closed = 6;
    ParticipantEvent participant_event = 7;
    ChannelTransactionEvent transaction = 8;
    ChannelBlockEvent block = 9;
    ChannelPerformanceUpdate performance = 10;
    ChannelAnalytics analytics = 11;
    ChannelListUpdate channel_list = 12;
  }
}

// ============================================================================
// Interactive Commands
// ============================================================================

message ChannelCommand {
  enum CommandType {
    SUBSCRIBE_CHANNEL = 0;
    UNSUBSCRIBE_CHANNEL = 1;
    CHANGE_UPDATE_INTERVAL = 2;
    ADD_FILTER = 3;
    REMOVE_FILTER = 4;
    TOGGLE_EVENT_TYPE = 5;
    PAUSE = 6;
    RESUME = 7;
    REQUEST_SNAPSHOT = 8;
  }

  CommandType command = 1;
  string channel_id = 2;
  map<string, string> parameters = 3;
  google.protobuf.Timestamp timestamp = 4;
}

// ============================================================================
// Historical Queries
// ============================================================================

message ChannelHistoricalQuery {
  string channel_id = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time = 3;
  repeated string event_types = 4;
  int32 limit = 5;
  int32 offset = 6;
}

message ChannelHistoricalResponse {
  string channel_id = 1;
  repeated ChannelEventStream events = 2;
  int32 total_events = 3;
  bool has_more = 4;
  google.protobuf.Timestamp query_executed_at = 5;
}

// ============================================================================
// gRPC Service Definition
// ============================================================================

service ChannelStreamService {
  // Get channel information (one-shot)
  rpc GetChannelInfo(ChannelSubscribeRequest) returns (ChannelInfo);

  // List all accessible channels (one-shot)
  rpc ListChannels(ChannelSubscribeRequest) returns (ChannelListUpdate);

  // Subscribe to channel events (server streaming)
  rpc StreamChannelEvents(ChannelSubscribeRequest) returns (stream ChannelEventStream);

  // Subscribe to specific channel types (server streaming)
  rpc StreamChannelTransactions(ChannelSubscribeRequest) returns (stream ChannelTransactionEvent);
  rpc StreamChannelBlocks(ChannelSubscribeRequest) returns (stream ChannelBlockEvent);
  rpc StreamChannelPerformance(ChannelSubscribeRequest) returns (stream ChannelPerformanceUpdate);
  rpc StreamParticipantEvents(ChannelSubscribeRequest) returns (stream ParticipantEvent);

  // Bidirectional streaming for interactive monitoring
  rpc InteractiveChannelMonitor(stream ChannelCommand) returns (stream ChannelEventStream);

  // Historical channel data query
  rpc QueryHistoricalEvents(ChannelHistoricalQuery) returns (ChannelHistoricalResponse);

  // Get channel analytics
  rpc GetChannelAnalytics(ChannelHistoricalQuery) returns (ChannelAnalytics);

  // Unsubscribe from streaming
  rpc Unsubscribe(ChannelUnsubscribeRequest) returns (ChannelUnsubscribeResponse);
}
